[tool.poetry]
name = "budgeteer"
version = "0.1.0"
description = "An HTTP API for managing financial budgets."
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
