[tool.poetry]
name = "budgeteer"
version = "0.1.0"
description = "An HTTP API for managing financial budgets."
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
gitlint = "^0.17.0"
mdformat = "^0.7.13"
mdformat_tables = "^0.4.1"
black = "^22.1.0"
flake8 = "^4.0.1"
bandit = "^1.7.3"
isort = "^5.10.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
